--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
     environment:
         - "BotToken=AAAAAA"
     restart: unless-stopped
+    volumes: 
+        - db:/users.json
+volumes: 
+  db:
